# cs525-lab5-tasks

./: Cargo.toml  README.md  cs525-kernel-task1  cs525-kernel-task2  cs525-kernel-task3  cs525-kernel-task4  link.x  memory.x  memory_task2.x  memory_task3.x  memory_task4.x
.cargo/: config
src/: main.rs  main2.rs  main3.rs  main4.rs  syscall_user.rs
