[package]
name = "cs525-kernel-task1"
version = "0.1.0"
authors = ["Ruichun <ruichun.ma@yale.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "task1"
path = "src/main.rs"

[[bin]]
name = "task2"
path = "src/main2.rs"

[[bin]]
name = "task3"
path = "src/main3.rs"

[[bin]]
name = "task4"
path = "src/main4.rs"

[dependencies]
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
cortex-m-semihosting = "0.3.7"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm"]